--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,15 @@ services:
   magic:
     image: mageai/mageai:latest
     command: mage start ${PROJECT_NAME}
-    env_file:
-      - .env
     build:
       context: .
       dockerfile: Dockerfile
     environment:
       USER_CODE_PATH: /home/src/${PROJECT_NAME}
-      ENV: ${ENV}
+      PROJECT_NAME: test
+      AWS_REGION_NAME: ${AWS_REGION_NAME}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     ports:
       - 6789:6789
     volumes:
