--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       AWS_REGION_NAME: ${AWS_REGION_NAME}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      LAMBDA_FUNCTION_ARN: ${LAMBDA_FUNCTION_ARN}
+      LAMBDA_FUNCTION_NAME: ${LAMBDA_FUNCTION_NAME}
     ports:
       - 6789:6789
     volumes:
